# rust-file-uploader-api

./: Cargo.toml  README.md  cli.yaml
src/: main.rs
